syntax = "proto3";

package user;

option go_package = "proto/";

service UserService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
  rpc SearchUsers (SearchUsersRequest) returns (SearchUsersResponse);
}

message User {
  int32 id = 1;
  string fname = 2;
  string city = 3;
  int64 phone = 4;
  float height = 5;
  bool married = 6;
}

message GetUserRequest {
  int32 id = 1;
}

message GetUserResponse {
  User user = 1;
}

message ListUsersRequest {
  repeated int32 ids = 1;
}

message ListUsersResponse {
  repeated User users = 1;
}

message SearchUsersRequest {
 int32 id = 1;
  string fname = 2;
  string city = 3;
  int64 phone = 4;
  float height = 5;
  bool married = 6;
}

message SearchUsersResponse {
  repeated User users = 1;
}
